--- a/Frontend/stayfit/package.json
+++ b/Frontend/stayfit/package.json
@@ -19,6 +19,7 @@
     "react-dom": "^18.2.0",
     "react-leaflet": "^4.2.1",
     "react-qr-code": "^2.0.12",
+    "react-responsive-masonry": "^2.1.7",
     "react-router-dom": "^6.15.0",
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4"
