--- a/Backend/stayfit/src/main/resources/application.properties
+++ b/Backend/stayfit/src/main/resources/application.properties
@@ -1,1 +1,12 @@
+# PostgreSQL Database Configuration
+spring.datasource.url=jdbc:postgresql://localhost:5432/stayfitDB
+spring.config.import=classpath:application-secret.properties
 
+# Hibernate/JPA Configuration
+spring.jpa.hibernate.ddl-auto=create-drop
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
+
+server.error.include-message=always
