--- a/Backend/stayfit/src/main/resources/application.properties
+++ b/Backend/stayfit/src/main/resources/application.properties
@@ -5,7 +5,7 @@ spring.config.import=classpath:application-secret.properties
 spring.datasource.driver-class-name=org.postgresql.Driver
 
 # Hibernate/JPA Configuration
-spring.jpa.hibernate.ddl-auto=create-drop
+spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.database=postgresql
 spring.jpa.properties.hibernate.default_schema=stayfit
