--- a/Backend/stayfit/src/main/resources/application.properties
+++ b/Backend/stayfit/src/main/resources/application.properties
@@ -3,6 +3,7 @@
 spring.datasource.url=jdbc:postgresql://localhost:5432/stayfitDB
 spring.config.import=classpath:application-secret.properties
 spring.datasource.driver-class-name=org.postgresql.Driver
+spring.datasource.auto-commit=false
 
 # Hibernate/JPA Configuration
 spring.jpa.hibernate.ddl-auto=update
@@ -30,3 +31,6 @@ spring.mail.port=587
 sspring.config.import=classpath:application-secret.properties
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
+
+spring.servlet.multipart.max-file-size=10MB
+spring.servlet.multipart.max-request-size=10MB
