--- a/Frontend/stayfit/package.json
+++ b/Frontend/stayfit/package.json
@@ -14,6 +14,7 @@
     "bootstrap": "^5.3.1",
     "chart.js": "^4.4.0",
     "leaflet": "^1.9.4",
+    "qrcode.react": "^3.1.0",
     "react": "^18.2.0",
     "react-calendar": "^4.6.1",
     "react-chartjs-2": "^5.2.0",
